<resources>
    <string name="app_name">BMI Analyzer</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="weight">Weight</string>
    <string name="Length">Length</string>
    <string name="data_of_birth">Data of Birth</string>
    <string name="cm">cm</string>
    <string name="Kg">Kg</string>
    <string name="Create_New_Account">Create New Account</string>
    <string name="Create_New_Account_sec">if you already have an account</string>
    <string name="Name">Name</string>
    <string name="password">password</string>
    <string name="Email">E-mail</string>
    <string name="Re_Password">Re-Password</string>
    <string name="CREATE">CREATE</string>
    <string name="You_Have_An_Account">You Have An Account?</string>
    <string name="login">login</string>
    <string name="Welcome_Back">Welcome Back</string>
    <string name="sec_Welcome_Back">if you already have an account , login</string>
    <string name="username">username</string>
    <string name="You_Dont_Have_An_Account">You Don\'t Have An Account?</string>
    <string name="sign_up">sign up</string>
    <string name="title_new_record">New Record</string>
    <string name="data">Data</string>
    <string name="time">Time</string>
    <string name="title_food">Add Food Details</string>
    <string name="name">Name</string>
    <string name="category">Category</string>
    <string name="calory">Calory</string>
    <string name="photo">Photo</string>
    <string name="Upload_Photo">Upload Photo</string>
    <string name="save">Save</string>
    <string name="cal_g">Cal/g</string>
    <string name="save_data">Save Data</string>
    <string name="hi">Hi,Mohammed</string>
    <string name="current_status">Current Status</string>
    <string name="old_status">Old Status</string>
    <string name="add_food">Add food </string>
    <string name="edit_food">Edit food Details</string>
    <string name="add_record">Add Record</string>
    <string name="view_food">View Food</string>
    <string name="logout">Logout</string>
    <string name="Food_List">Food List</string>


</resources>