<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/blue"
            app:title="BMI Analyzer"
            app:titleMarginStart="150sp"
            app:titleTextColor="@color/white"
            ></androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <TextView
        android:id="@+id/title_complete_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@android:dimen/app_icon_size"
        android:gravity="center"
        android:text="@string/hi"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="40dp"
        android:paddingVertical="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_status"
            android:textColor="@color/blue"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/color_border"
            android:gravity="center"
            android:hint="Normal (Still Good)"
            android:inputType="date"
            android:padding="10dp"
            android:textStyle="bold"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/old_status"
            android:textColor="@color/blue"
            android:textSize="25sp"
            android:textStyle="bold" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycle_view"
            android:layout_width="match_parent"
            android:layout_height="250dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:orientation="vertical">



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/add_food"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:background="@color/blue"
                android:padding="5dp"
                android:text="@string/add_food"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:ignore="InvalidId" />

            <Button
                android:id="@+id/add_record"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@color/blue"
                android:padding="5dp"
                android:gravity="center"
                android:text="@string/add_record"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:ignore="InvalidId" />
        </LinearLayout>

        <Button
            android:id="@+id/view_food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/blue"
            android:minHeight="48dp"
            android:padding="8dp"
            android:text="@string/view_food"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:ignore="InvalidId,TouchTargetSizeCheck" />

        <Button
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@null"
            android:padding="8dp"
            android:text="@string/logout"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            tools:ignore="InvalidId" />
    </LinearLayout>


</LinearLayout>