<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".food_details"
    android:orientation="vertical">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/blue"
            app:title="BMI Analyzer"
            app:titleMarginStart="150sp"
            app:titleTextColor="@color/white"
            ></androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <TextView
        android:id="@+id/title_complete_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@android:dimen/app_icon_size"
        android:gravity="center"
        android:text="@string/title_food"
        android:textColor="@color/blue"
        android:textSize="40sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="640dp"
        android:orientation="vertical"
        android:paddingHorizontal="40dp"
        android:paddingVertical="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="85dp"
                android:text="@string/name"
                android:textColor="@color/blue"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="155dp"
                android:layout_height="match_parent"
                android:background="@drawable/color_border"
                android:inputType="text"
                android:textStyle="bold"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:text="@string/category"
                android:textColor="@color/blue"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner_category"
                android:layout_width="180dp"
                android:layout_height="40dp"
                tools:ignore="SpeakableTextPresentCheck"
                />



        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="85dp"
                android:text="@string/calory"
                android:textColor="@color/blue"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:background="@drawable/color_border"
                android:inputType="date"
                android:textStyle="bold"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:gravity="center"
                android:text="@string/cal_g"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:textSize="20sp"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="85dp"
            android:text="@string/photo"
            android:textColor="@color/blue"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="25dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="210dp"
            android:src="@drawable/food"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/upload_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@color/blue"
                android:text="@string/Upload_Photo"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:ignore="InvalidId"
                android:layout_marginEnd="40dp"
                android:padding="9dp"/>

            <Button
                android:id="@+id/save_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@color/blue"
                android:text="@string/save"
                android:padding="8dp"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:ignore="InvalidId" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>