<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Complete_Information">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/holo_blue_dark"
            app:title="BMI Analyzer"
            app:titleMarginStart="150sp"
            app:titleTextColor="@color/white"
            ></androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/title_complete_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@android:dimen/app_icon_size"
        android:gravity="center"
        android:text="Complete Your Information"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="40sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:text="@string/gender"
                android:textColor="@color/blue"
                android:textSize="25sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radio_Group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:buttonTint="@color/blue"
                    android:text="@string/male"
                    android:textColor="@color/blue"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/blue"
                    android:text="@string/female"
                    android:textSize="18sp"
                    android:textColor="@color/blue"
                    android:textStyle="bold"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>
            </RadioGroup>




        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="70dp"
                android:text="@string/weight"
                android:textColor="@color/blue"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/w_decrement"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:background="@drawable/color_border"
                android:padding="0dp"
                android:text="—"
                android:textColor="@color/blue"
                android:textFontWeight="@integer/material_motion_duration_long_2"
                android:textStyle="bold"
                tools:ignore="DuplicateIds,TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/display_w_number"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:background="@drawable/color_border"
                android:gravity="center"
                android:inputType="number"
                android:text="1"
                android:textColor="#0277BD"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/w_increment"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:background="@drawable/color_border"
                android:padding="0dp"
                android:text="+"
                android:textColor="@color/blue"
                android:textFontWeight="@integer/material_motion_duration_long_2"
                android:textSize="25sp"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:gravity="center"
                android:text="@string/Kg"
                android:textColor="@color/blue"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="70dp"
                android:text="@string/Length"
                android:textColor="@color/blue"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/l_decrement"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:background="@drawable/color_border"
                android:padding="0dp"
                android:text="—"
                android:textColor="@color/blue"
                android:textFontWeight="@integer/material_motion_duration_long_2"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/display_l_number"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:background="@drawable/color_border"
                android:gravity="center"
                android:inputType="number"
                android:text="1"
                android:textColor="#0277BD"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/l_increment"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:background="@drawable/color_border"
                android:padding="0dp"
                android:text="+"
                android:textColor="@color/blue"
                android:textFontWeight="@integer/material_motion_duration_long_2"
                android:textSize="25sp"
                tools:ignore="DuplicateIds,TouchTargetSizeCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:gravity="center"
                android:text="@string/cm"
                android:textColor="@color/blue"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/data_of_birth"
                android:textColor="@color/blue"
                android:textSize="25sp"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="155dp"
                android:layout_height="match_parent"
                android:background="@drawable/color_border"
                android:textStyle="bold"
                android:inputType="date"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </LinearLayout>

        <Button
            android:id="@+id/save_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:background="@android:color/holo_blue_dark"
            android:text="Save Data"
            android:textColor="@android:color/white"
            android:textSize="26sp"
            android:textStyle="bold"
            tools:ignore="InvalidId" />


    </LinearLayout>


</LinearLayout>